Reescribiendo el metodo URLEncoder.encode para que funcione con Java 8